--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -10,7 +10,7 @@
         ></span>
   
         <div class="form-group">
-          <label for="text-input">Quote</label>
+          <label for="text-input">Meme</label>
           <textarea
             class="form-control"
             [(ngModel)]="quoteModel.text"
