--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <h1>
       {{ title }}
     </h1>
-    <h5 class="sub-title"> A site to share your favourite quotes</h5>
+    <h5 class="sub-title"> A site to share your favourite memey</h5>
   </header>
   <app-quotes></app-quotes>
 </div>
